--- a/Web.config
+++ b/Web.config
@@ -11,8 +11,9 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MIS4200_Team6-20211004114051.mdf;Initial Catalog=aspnet-MIS4200_Team6-20211004114051;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+	  <add name="DefaultConnection" connectionString="Data Source=cob.ohio.edu,4200;Initial Catalog=ohioTeam6IDMIS4200;Persist Security Info=True;User ID=MIS4200;Password=AI$database"
+		   providerName="System.Data.SqlClient"  />
+      
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
