Created user data controller, model and view added security so multiple users cannot be created

--- a/MIS4200_Team6.csproj
+++ b/MIS4200_Team6.csproj
@@ -244,6 +244,7 @@
     <Content Include="Views\UserData\Details.cshtml" />
     <Content Include="Views\UserData\Edit.cshtml" />
     <Content Include="Views\UserData\Index.cshtml" />
+    <Content Include="Views\UserData\duplicateUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
