--- a/MIS4200_Team6.csproj
+++ b/MIS4200_Team6.csproj
@@ -168,8 +168,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CoreValuesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\RecognitionsController.cs" />
     <Compile Include="Controllers\UserDataController.cs" />
     <Compile Include="DAL\MIS4200Team6Context.cs" />
     <Compile Include="Global.asax.cs">
@@ -177,7 +179,9 @@
     </Compile>
     <Compile Include="Migrations\MISContext\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CoreValues.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Recognition.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\UserData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -245,6 +249,16 @@
     <Content Include="Views\UserData\Edit.cshtml" />
     <Content Include="Views\UserData\Index.cshtml" />
     <Content Include="Views\UserData\duplicateUser.cshtml" />
+    <Content Include="Views\CoreValues\Create.cshtml" />
+    <Content Include="Views\CoreValues\Delete.cshtml" />
+    <Content Include="Views\CoreValues\Details.cshtml" />
+    <Content Include="Views\CoreValues\Edit.cshtml" />
+    <Content Include="Views\CoreValues\Index.cshtml" />
+    <Content Include="Views\Recognitions\Create.cshtml" />
+    <Content Include="Views\Recognitions\Delete.cshtml" />
+    <Content Include="Views\Recognitions\Details.cshtml" />
+    <Content Include="Views\Recognitions\Edit.cshtml" />
+    <Content Include="Views\Recognitions\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
