--- a/MIS4200_Team6.csproj
+++ b/MIS4200_Team6.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CoreValuesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RecognitionsController.cs" />
@@ -178,6 +179,7 @@
     </Compile>
     <Compile Include="Migrations\MISContext\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CoreValues.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Recognition.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -251,6 +253,11 @@
     <Content Include="Views\Recognitions\Details.cshtml" />
     <Content Include="Views\Recognitions\Edit.cshtml" />
     <Content Include="Views\Recognitions\Index.cshtml" />
+    <Content Include="Views\CoreValues\Create.cshtml" />
+    <Content Include="Views\CoreValues\Delete.cshtml" />
+    <Content Include="Views\CoreValues\Details.cshtml" />
+    <Content Include="Views\CoreValues\Edit.cshtml" />
+    <Content Include="Views\CoreValues\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
