--- a/MIS4200_Team6.csproj
+++ b/MIS4200_Team6.csproj
@@ -258,6 +258,7 @@
     <Content Include="Views\CoreValues\Details.cshtml" />
     <Content Include="Views\CoreValues\Edit.cshtml" />
     <Content Include="Views\CoreValues\Index.cshtml" />
+    <Content Include="Views\UserData\duplicateUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
