--- a/MIS4200_Team6.csproj
+++ b/MIS4200_Team6.csproj
@@ -265,6 +265,7 @@
     <Content Include="Views\Gamification\Details.cshtml" />
     <Content Include="Views\Gamification\Edit.cshtml" />
     <Content Include="Views\Gamification\Index.cshtml" />
+    <Content Include="Views\Recognitions\successfulRec.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
